added aria label to links

--- a/index.html
+++ b/index.html
@@ -194,28 +194,40 @@
                 <p class="team-position subtitle">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to instagram"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a class="social-link" aria-label="link to twitter" href="">
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to facebook"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to linkedin"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -237,28 +249,40 @@
                 <p class="team-position subtitle">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to instagram"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a class="social-link" aria-label="link to twitter" href="">
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to facebook"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to linkedin"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -280,28 +304,40 @@
                 <p class="team-position subtitle">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to instagram"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a class="social-link" aria-label="link to twitter" href="">
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to facebook"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to linkedin"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -323,28 +359,40 @@
                 <p class="team-position subtitle">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to instagram"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a class="social-link" aria-label="link to twitter" href="">
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to facebook"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a class="social-link" href="">
+                    <a
+                      class="social-link"
+                      aria-label="link to linkedin"
+                      href=""
+                    >
                       <svg width="16" height="16" class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -366,42 +414,50 @@
           <h2 class="customers section-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a class="customers-link" aria-label="link to Ya & Co" href="">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a class="customers-link" aria-label="link to Company" href="">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a
+                class="customers-link"
+                aria-label="link to Company Taglinehere"
+                href=""
+              >
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a
+                class="customers-link"
+                aria-label="link to Foster Peters"
+                href=""
+              >
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a class="customers-link" aria-label="link to Brand" href="">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers-link" href="">
+              <a class="customers-link" aria-label="link to Tag Line " href="">
                 <svg width="104" height="56" class="customers-icon">
                   <use href="./images/icons.svg#icon-tag-line"></use>
                 </svg>
@@ -431,7 +487,11 @@
           <p class="footer-social description">Social media</p>
           <ul class="social-list list footer-social-list">
             <li class="social-item">
-              <a class="social-link footer-social-link" href="">
+              <a
+                class="social-link footer-social-link"
+                aria-label="instagram"
+                href=""
+              >
                 <svg
                   width="24"
                   height="24"
@@ -442,7 +502,11 @@
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link footer-social-link" href="">
+              <a
+                class="social-link footer-social-link"
+                aria-label="twitter"
+                href=""
+              >
                 <svg
                   width="24"
                   height="24"
@@ -453,7 +517,11 @@
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link footer-social-link" href="">
+              <a
+                class="social-link footer-social-link"
+                aria-label="facebook"
+                href=""
+              >
                 <svg
                   width="24"
                   height="24"
@@ -464,7 +532,11 @@
               </a>
             </li>
             <li class="social-item">
-              <a class="social-link footer-social-link" href="">
+              <a
+                class="social-link footer-social-link"
+                aria-label="linkedin"
+                href=""
+              >
                 <svg
                   width="24"
                   height="24"
