--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -25,6 +30,15 @@
           <a class="link logo" href="./index.html"
             >Web<span class="decor">Studio</span></a
           >
+          <button
+            class="js-open-menu menu-toggle"
+            type="button"
+            aria-label="mobile menu switch"
+          >
+            <svg class="burger-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-burger"></use>
+            </svg>
+          </button>
           <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link active-link" href="./index.html"
@@ -474,79 +488,81 @@
 
     <footer class="footer">
       <div class="container footer-flex">
-        <div class="footer-wrapper">
-          <a class="link logo logo-footer" href="./index.html"
-            >Web<span class="decor">Studio</span>
-          </a>
-          <p class="footer-description description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social">
-          <p class="footer-social description">Social media</p>
-          <ul class="social-list list footer-social-list">
-            <li class="social-item">
-              <a
-                class="social-link footer-social-link"
-                aria-label="instagram"
-                href=""
-              >
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+        <div class="footer-tablet">
+          <div class="footer-wrapper">
+            <a class="link logo logo-footer" href="./index.html"
+              >Web<span class="decor">Studio</span>
+            </a>
+            <p class="footer-description description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social">
+            <p class="footer-social description">Social media</p>
+            <ul class="social-list list footer-social-list">
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="instagram"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link footer-social-link"
-                aria-label="twitter"
-                href=""
-              >
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="twitter"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link footer-social-link"
-                aria-label="facebook"
-                href=""
-              >
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="facebook"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a
-                class="social-link footer-social-link"
-                aria-label="linkedin"
-                href=""
-              >
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="linkedin"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="subscribe-wrapper">
           <p class="subscribe-text description">Subscribe</p>
@@ -573,7 +589,7 @@
 
     <!-- End Footer -->
     <!-- Start modal -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-close button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -660,9 +676,114 @@
           <button class="button modal-button" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <!-- End  modal -->
 
+    <div class="menu-container js-menu-container">
+      <button
+        class="button-close js-close-menu menu-toggle"
+        type="button"
+        aria-label="mobile menu switch"
+      >
+        <svg class="icon-close" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu">
+        <ul class="mobile-menu-list list">
+          <li class="menu-item">
+            <a class="menu-link link active-link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
+        </ul>
+
+        <address class="contacts-mobile">
+          <ul class="contacts-mobile-list list">
+            <li class="contacts-item">
+              <a class="contacts-phone-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a
+                class="contacts-mail-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="social-list list footer-social-list">
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="instagram"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="twitter"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="facebook"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="linkedin"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
