--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -25,14 +31,23 @@
           <a class="link logo" href="./index.html"
             >Web<span class="decor">Studio</span></a
           >
+          <button
+            class="js-open-menu menu-toggle"
+            type="button"
+            aria-label="mobile menu switch"
+          >
+            <svg class="burger-icon" width="32" height="22">
+              <use href="./images/icons.svg#icon-burger"></use>
+            </svg>
+          </button>
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Studio</a>
+              <a class="menu-link link active-link" href="./index.html"
+                >Studio</a
+              >
             </li>
             <li class="menu-item">
-              <a class="menu-link link active-link" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Contacts</a>
