--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/vars.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
     <link rel="stylesheet" href="./css/tablet.css" />
@@ -31,7 +32,9 @@
             >Web<span class="decor">Studio</span></a
           >
           <button
-            class="js-open-menu menu-toggle"
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
             type="button"
             aria-label="mobile menu switch"
           >
@@ -160,6 +163,7 @@
             <li class="work-item">
               <img
                 class="work-image"
+                srcset="./images/monitor.jpg 1x, ./images/monitor@2x.jpg 2x"
                 src="./images/monitor.jpg"
                 alt="monitor"
                 width="360"
@@ -169,6 +173,7 @@
             <li class="work-item">
               <img
                 class="work-image"
+                srcset="./images/phone.jpg 1x, ./images/phone@2x.jpg 2x"
                 src="./images/phone.jpg"
                 alt="phone"
                 width="360"
@@ -178,6 +183,10 @@
             <li class="work-item">
               <img
                 class="work-image"
+                srcset="
+                  ./images/phone-laptop.jpg    1x,
+                  ./images/phone-laptop@2x.jpg 2x
+                "
                 src="./images/phone-laptop.jpg"
                 alt="phone and laptop"
                 width="360"
@@ -198,6 +207,10 @@
           <ul class="team-list list">
             <li class="team-item">
               <img
+                srcset="
+                  ./images/mark-guerrero.jpg    1x,
+                  ./images/mark-guerrero@2x.jpg 2x
+                "
                 src="./images/mark-guerrero.jpg"
                 alt="man"
                 width="264"
@@ -252,7 +265,7 @@
             </li>
             <li class="team-item">
               <img
-                class="team-img"
+                srcset="./images/tom-ford.jpg 1x, ./images/tom-ford@2x.jpg 2x"
                 src="./images/tom-ford.jpg"
                 alt="man"
                 width="264"
@@ -307,7 +320,10 @@
             </li>
             <li class="team-item">
               <img
-                class="team-img"
+                srcset="
+                  ./images/camila-garcia.jpg    1x,
+                  ./images/camila-garcia@2x.jpg 2x
+                "
                 src="./images/camila-garcia.jpg"
                 alt="woman"
                 width="264"
@@ -362,7 +378,10 @@
             </li>
             <li class="team-item">
               <img
-                class="team-img"
+                srcset="
+                  ./images/daniel-wilson.jpg    1x,
+                  ./images/daniel-wilson@2x.jpg 2x
+                "
                 src="./images/daniel-wilson.jpg"
                 alt="man"
                 width="264"
@@ -589,7 +608,8 @@
 
     <!-- End Footer -->
     <!-- Start modal -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-close button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -676,9 +696,10 @@
           <button class="button modal-button" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
     <!-- End  modal -->
 
+    <!-- Start mobile-menu -->
     <div class="menu-container js-menu-container">
       <button
         class="button-close js-close-menu menu-toggle"
@@ -783,7 +804,18 @@
       </div>
     </div>
 
+    <!-- End  mobile-menu -->
+
+    <!-- Start scripts -->
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+
+    <!-- End scripts -->
   </body>
 </html>
