--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/vars.css" />
     <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
     <link rel="stylesheet" href="./css/tablet.css" />
@@ -32,7 +33,9 @@
             >Web<span class="decor">Studio</span></a
           >
           <button
-            class="js-open-menu menu-toggle"
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
             type="button"
             aria-label="mobile menu switch"
           >
@@ -114,8 +117,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Banking App Interface Concept</h2>
-                  <p class="subtitle">App</p>
+                  <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                  <p class="portfolio-subtitle subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -136,8 +139,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Cashless Payment</h2>
-                  <p class="subtitle">Marketing</p>
+                  <h2 class="portfolio-title">Cashless Payment</h2>
+                  <p class="portfolio-subtitle subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -158,8 +161,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Meditation App</h2>
-                  <p class="subtitle">App</p>
+                  <h2 class="portfolio-title">Meditation App</h2>
+                  <p class="portfolio-subtitle subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -180,8 +183,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Taxi Service</h2>
-                  <p class="subtitle">Marketing</p>
+                  <h2 class="portfolio-title">Taxi Service</h2>
+                  <p class="portfolio-subtitle subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -202,12 +205,11 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Screen Illustrations</h2>
-                  <p class="subtitle">Design</p>
+                  <h2 class="portfolio-title">Screen Illustrations</h2>
+                  <p class="portfolio-subtitle subtitle">Design</p>
                 </div>
               </a>
             </li>
-
             <li class="portfolio-item">
               <a class="link portfolio-link" href="">
                 <div class="portfolio-image">
@@ -225,8 +227,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Online Courses</h2>
-                  <p class="subtitle">Marketing</p>
+                  <h2 class="portfolio-title">Online Courses</h2>
+                  <p class="portfolio-subtitle subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -247,8 +249,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Instagram Stories Concept</h2>
-                  <p class="subtitle">Design</p>
+                  <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                  <p class="portfolio-subtitle subtitle">Design</p>
                 </div>
               </a>
             </li>
@@ -269,8 +271,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Organic Food</h2>
-                  <p class="subtitle">Web Site</p>
+                  <h2 class="portfolio-title">Organic Food</h2>
+                  <p class="portfolio-subtitle subtitle">Web Site</p>
                 </div>
               </a>
             </li>
@@ -291,8 +293,8 @@
                 </div>
 
                 <div class="portfolio-item-content">
-                  <h2 class="title">Fresh Coffee</h2>
-                  <p class="subtitle">Web Site</p>
+                  <h2 class="portfolio-title">Fresh Coffee</h2>
+                  <p class="portfolio-subtitle subtitle">Web Site</p>
                 </div>
               </a>
             </li>
@@ -307,63 +309,81 @@
 
     <footer class="footer">
       <div class="container footer-flex">
-        <div class="footer-wrapper">
-          <a class="link logo logo-footer" href="./index.html"
-            >Web<span class="decor">Studio</span>
-          </a>
-          <p class="footer-description description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="social">
-          <p class="footer-social description">Social media</p>
-          <ul class="social-list list footer-social-list">
-            <li class="social-item">
-              <a class="social-link footer-social-link" href="">
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+        <div class="footer-tablet">
+          <div class="footer-wrapper">
+            <a class="link logo logo-footer" href="./index.html"
+              >Web<span class="decor">Studio</span>
+            </a>
+            <p class="footer-description description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="social">
+            <p class="footer-social description">Social media</p>
+            <ul class="social-list list footer-social-list">
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="instagram"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link footer-social-link" href="">
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="twitter"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link footer-social-link" href="">
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="facebook"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="social-item">
-              <a class="social-link footer-social-link" href="">
-                <svg
-                  width="24"
-                  height="24"
-                  class="social-icon footer-social-icon"
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a
+                  class="social-link footer-social-link"
+                  aria-label="linkedin"
+                  href=""
                 >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+                  <svg
+                    width="24"
+                    height="24"
+                    class="social-icon footer-social-icon"
+                  >
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="subscribe-wrapper">
           <p class="subscribe-text description">Subscribe</p>
@@ -389,5 +409,120 @@
     </footer>
 
     <!-- End Footer -->
+
+    <div class="menu-container js-menu-container">
+      <button
+        class="button-close js-close-menu menu-toggle"
+        type="button"
+        aria-label="mobile menu switch"
+      >
+        <svg class="icon-close" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu">
+        <ul class="mobile-menu-list list">
+          <li class="menu-item">
+            <a class="menu-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link active-link" href="./portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
+          </li>
+        </ul>
+
+        <address class="contacts-mobile">
+          <ul class="contacts-mobile-list list">
+            <li class="contacts-item">
+              <a class="contacts-phone-link link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a
+                class="contacts-mail-link link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="social-list list footer-social-list">
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="instagram"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="twitter"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="facebook"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link footer-social-link"
+              aria-label="linkedin"
+              href=""
+            >
+              <svg
+                width="24"
+                height="24"
+                class="social-icon footer-social-icon"
+              >
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- start scripts -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+    <!-- End scripts -->
   </body>
 </html>
