--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="contacts list">
+          <ul class="contacts-list list">
             <li class="contacts-item">
               <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -593,6 +593,7 @@
                 type="email"
                 placeholder="E-mail"
                 id="subscribe"
+                required
               />
             </label>
             <button class="button subscribe-button" type="submit">
