--- a/portfolio.html
+++ b/portfolio.html
@@ -45,12 +45,12 @@
           </button>
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link active-link" href="./index.html"
-                >Studio</a
-              >
+              <a class="menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="menu-link link active-link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="">Contacts</a>
@@ -58,7 +58,7 @@
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="contacts list">
+          <ul class="contacts-list list">
             <li class="contacts-item">
               <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -118,7 +118,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                  <p class="portfolio-subtitle subtitle">App</p>
+                  <p class="subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -140,7 +140,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Cashless Payment</h2>
-                  <p class="portfolio-subtitle subtitle">Marketing</p>
+                  <p class="subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -162,7 +162,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Meditation App</h2>
-                  <p class="portfolio-subtitle subtitle">App</p>
+                  <p class="subtitle">App</p>
                 </div>
               </a>
             </li>
@@ -184,7 +184,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Taxi Service</h2>
-                  <p class="portfolio-subtitle subtitle">Marketing</p>
+                  <p class="subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -206,7 +206,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
-                  <p class="portfolio-subtitle subtitle">Design</p>
+                  <p class="subtitle">Design</p>
                 </div>
               </a>
             </li>
@@ -228,7 +228,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Online Courses</h2>
-                  <p class="portfolio-subtitle subtitle">Marketing</p>
+                  <p class="subtitle">Marketing</p>
                 </div>
               </a>
             </li>
@@ -250,7 +250,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                  <p class="portfolio-subtitle subtitle">Design</p>
+                  <p class="subtitle">Design</p>
                 </div>
               </a>
             </li>
@@ -272,7 +272,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Organic Food</h2>
-                  <p class="portfolio-subtitle subtitle">Web Site</p>
+                  <p class="subtitle">Web Site</p>
                 </div>
               </a>
             </li>
@@ -294,7 +294,7 @@
 
                 <div class="portfolio-item-content">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
-                  <p class="portfolio-subtitle subtitle">Web Site</p>
+                  <p class="subtitle">Web Site</p>
                 </div>
               </a>
             </li>
